--- a/examples/demo/public/index.html
+++ b/examples/demo/public/index.html
@@ -10,18 +10,17 @@
         overflow: auto;
         border-bottom: 1px solid #ccc;
       }
-      body {
-        margin: 1rem;
-      }
       .editors {
+        padding: 2rem;
         margin: 0 auto;
+        max-width: 80ch;
       }
     </style>
   </head>
   <body>
     <div class="editors">
-      <div id="ts-editor-2" class="editor"></div>
       <div id="ts-editor-1" class="editor"></div>
+      <div id="ts-editor-2" class="editor"></div>
       <div id="html-editor" class="editor"></div>
       <div id="css-editor" class="editor"></div>
     </div>
