--- a/examples/demo-save/public/index.html
+++ b/examples/demo-save/public/index.html
@@ -29,6 +29,8 @@
     </div>
     <div class="buttons">
       <button id="save">Save</button>
+      <button id="add">Add src/adder.rs</button>
+      <button id="remove">Remove src/adder.rs</button>
     </div>
     <script src="js/main.js"></script>
   </body>
