Provides the ability to disable all popups
- Adds new `enablePopups()` method to workspace
- Adds new `popupsEnabled` property that is used to bypass showing popups (while continuing to leave workspace enabled and running)
- Adds buttons to demo to test enabling or disabling popups

--- a/examples/demo/public/index.html
+++ b/examples/demo/public/index.html
@@ -15,6 +15,10 @@
         margin: 0 auto;
         max-width: 80ch;
       }
+      .buttons {
+        margin: 0 auto;
+        text-align: center;
+      }
     </style>
   </head>
   <body>
@@ -24,6 +28,11 @@
       <div id="html-editor" class="editor"></div>
       <div id="css-editor" class="editor"></div>
     </div>
+
+    <div class="buttons">
+          <button id="enablePopups">Enable Popups</button>
+          <button id="disablePopups">Disable Popups</button>
+        </div>
 
     <script src="js/main.js"></script>
   </body>
