deploy: 60fe2d7f8fb04b31ff2e05b62474ea732f7a2c6f

--- a/index.html
+++ b/index.html
@@ -1,29 +1,17 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <meta charset="utf-8" />
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/assets/favicon.17e50649.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CodeMirror Workspace Web Worker Demo</title>
-    <style>
-      .CodeMirror {
-        height: 100% !important;
-      }
-      .editor {
-        width: 100%;
-        overflow: auto;
-        height: 800px;
-      }
-      .editors {
-        margin: 5rem auto;
-        max-width: 80ch;
-        height: 800px;
-      }
-    </style>
+    <script type="module" crossorigin src="/assets/index.6684eb11.js"></script>
+    <link rel="stylesheet" href="/assets/index.9d583176.css">
   </head>
   <body>
     <div class="editors">
       <div id="editor" class="editor"></div>
     </div>
-
-    <script src="js/main.js"></script>
+    
   </body>
 </html>
