--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/assets/favicon.17e50649.svg" />
+    <link rel="icon" type="image/svg+xml" href="/lsps/assets/favicon.17e50649.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CodeMirror Workspace Web Worker Demo</title>
-    <script type="module" crossorigin src="/assets/index.6684eb11.js"></script>
-    <link rel="stylesheet" href="/assets/index.9d583176.css">
+    <script type="module" crossorigin src="/lsps/assets/index.6684eb11.js"></script>
+    <link rel="stylesheet" href="/lsps/assets/index.9d583176.css">
   </head>
   <body>
     <div class="editors">
